@@ -1,8 +1,9 @@
-$Id: ChangeLog,v 1.41 2008/06/17 23:49:51 stewy Exp $
+$Id: ChangeLog,v 1.42 2008/06/18 10:05:30 tat Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
 LibU x.y.z:
+	- [config] u_config_print_to_fp added
 	- [configure] netinet/{tcp,in}.h and sys/socket.h tests
 	- [net] do not include winsock.h
 	- [config] u_config_load_from_buf and u_config_save_to_buf added
